[gd_scene load_steps=9 format=3 uid="uid://bonmdeg42y0cn"]

[ext_resource type="Texture2D" uid="uid://chdsaojs7y52y" path="res://Assets/win.png" id="1_uw1tq"]
[ext_resource type="Script" uid="uid://bmmv8mqt4rt53" path="res://Scene/win.gd" id="1_ygu2s"]
[ext_resource type="FontFile" uid="uid://u1vo6uxfqqis" path="res://Assets/Font/PixeloidSansBold-PKnYd.ttf" id="2_ibe3g"]
[ext_resource type="AudioStream" uid="uid://dcc3xcaqtv5m7" path="res://Assets/Sound/click_btn.wav" id="3_ygu2s"]
[ext_resource type="AudioStream" uid="uid://c24prwpabufi0" path="res://Assets/Sound/hover_btn.wav" id="4_wbk4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53iet"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7d5j2"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpsj8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ygu2s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(951, 554.5)
scale = Vector2(1.90039, 1.10449)
texture = ExtResource("1_uw1tq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 791.0
offset_top = 878.0
offset_right = 1067.0
offset_bottom = 949.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.015, 1.015)
theme_override_constants/separation = 10

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ibe3g")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_53iet")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7d5j2")
theme_override_styles/normal = SubResource("StyleBoxFlat_tpsj8")
text = "Main Menu"

[node name="HoverBtn" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("3_ygu2s")
volume_db = -20.0
bus = &"SFX"

[node name="ClickBtn" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("4_wbk4i")
volume_db = -20.0
bus = &"SFX"

[node name="Label" type="Label" parent="."]
offset_left = 61.0
offset_top = 98.0
offset_right = 1439.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("2_ibe3g")
theme_override_font_sizes/font_size = 46
text = "And now Kitsu can eat the fish happily..."

[node name="TimeLabel" type="Label" parent="."]
offset_left = 61.0
offset_top = 70.0
offset_right = 299.0
offset_bottom = 93.0
scale = Vector2(1.205, 1.205)
theme_override_fonts/font = ExtResource("2_ibe3g")
text = "WAKTU: %02d:%02d.%02d"

[node name="JumpLabel" type="Label" parent="."]
offset_left = 411.0
offset_top = 71.0
offset_right = 597.0
offset_bottom = 94.0
scale = Vector2(1.205, 1.205)
theme_override_fonts/font = ExtResource("2_ibe3g")
text = "TOTAL LOMPATAN: "

[connection signal="mouse_entered" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
